# chronicle

./: .gitignore  README.md  pyproject.toml
src/chronicle/: __init__.py  cli.py  git_analyzer.py  models.py  narrator.py
src/chronicle/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
tests/: conftest.py  test_cli.py  test_git_analyzer.py  test_integration_llm.py  test_models.py  test_narrator.py  test_providers.py
